tests/snapshots/ir_snapshots__ir_snapshot_factorial.snap
---
source: tests/ir_snapshots.rs
expression: ir
---
; ModuleID = 'calc_jit'
source_filename = "calc_jit"

define i64 @main() {
entry:
  ret i64 6
}
